src/index.css
/* ... */
.nav-list {
    display: flex;
    align-items: center;
    justify-content: center;
}
.nav-list li {
    list-style: none;
    padding: 0 20px;
    position: relative;
}
.nav-list li a {
    text-decoration:   none;
    font-weight: 600;
    color: #1a1b1b;
    font-size: 16px;
    transition: 0.3s ease;

}
.nav-list li a:hover,
.nav-list li a.active{
    color: rgb(16, 160, 112);

}

.nav-list li a.active::after,
.nav-list li a:hover::after {
    content: "";
    background:  rgb(16, 160, 112);
    width: 30%;
    height: 3px;
    bottom: -4px;
    left: 20px;
    position: absolute;
}
.mobile {
    display: none;
    align-items: normal;
    
}
#close {
    display: none;
}
/* hero section  */
.hero{
    background-image: url(images/hero4.png);
    background-size: cover;
    height: 90vh;
    width: 100%;
    background-position: top 25px  ;
    padding: 0 90px;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;

} 
.hero h4 {
    padding-bottom: 10px;
}
.hero h1 {
    color: rgb(16, 160, 112); 
}
.hero p {
    padding: 10px;

}
.hero button {
    background-image: url(images/button.png);
    background-size: cover;
    padding: 20px 90px;
    border: none;
    background-color: transparent;
    color:  rgb(16, 160, 112);
    background-repeat: no-repeat;
    font-size: 20px;
    font-weight:700;
    cursor: pointer;
}

/* features section  */

.feat {
    margin: 80px 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 220px;
    width: 200px;
    border: 0.5px solid rgb(167, 161, 161);
    padding: 5px;
    background-color: white;
    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.3);
    left: 20px;
    top: 20px;
}
.feat:hover {
    box-shadow: 20px 20px 35px rgba(0, 0, 0, 0.15)
}
.feat h6 {
    background-color: #eeafde;
    margin-top: 20px;
    padding: 4px;
}
.features {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    margin: 0 6%;
    
} 

/* products section  */

.products {
    text-align: center;
    color: #1a1a1a;
}
.products h2 {
    color: #1a1a1a;
}
.products p {
    color: #1a1a1a;
}

.pro-container{
    padding: 0 50px;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}
.pro {
    position: relative;
    width: 23%;
    min-width: 250px;
    padding: 10px;
    border: solid 1px rgba(75, 70, 70, 0.15);
    border-radius: 25px;
    cursor: pointer;
    box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
    margin: 15px 0;
    transition: 0.2s ease ;
}
.pro:hover {
    box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.06);
}
.pro img {
    width: 100%;
    border-radius: 20px;
}
.des {
    text-align: start; 
    padding: 10px 0;
}
.des span {
    color: #7f928a;
    font-size: 12px;
}
.des h5 {
    padding-top: 7px;
    color: #1a1a1a;
    font-weight: 900;
}
.star {
    font-size: 12px;
    color: #fccf0a;
}
.des h4 {
    padding-top: 7px;
    font-size: 15px;
    color: rgb(33, 151, 39);
}

.Cart {
    width: 40px;
    height: 40px;
    line-height: 40px;
    padding-top: 13px;
    position: absolute;
    color: aquamarine;
    background-color: #e8f6ea;
    border-radius: 50px;
    bottom: 10px;
    right: 10px;
    border-color: 1px solid #cce7d0;

}
.fa-cart-shopping:before {
  content: "\f07a";
  top: -10px;
  position: relative;
}
/* Banner sectiions */
.banner {
    margin: 40px 0;
    background-image: url(images/banner/b2.jpg);
    background-size: cover;
    height: 300px;
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    color: white;
    margin-bottom: 60px;
}
.banner button:hover {
    background-color: rgb(16, 160, 112);
color: white;
}
.banner h1 ,
.banner span {
    color: rgb(218, 23, 23);
}
.banner h1,
.banner h4 {
    margin-top: 15px;
    color: white;
}
/* sm-banner section */
.sm-banner{
    margin-left: 50px;
    margin-right: 50px;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}
.banner-box {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    background-image: url(images/banner/b17.jpg);
    margin: 40px 0;
    background-size: cover;
    height: 50vh;
    width: 49%;
    padding: 30px;
    color: white;
    margin-bottom: 20px;
    background-position: center;
}
.banner-box h4,
.banner-box h2,
.banner-box p {
    color: white;
    padding-bottom: 10px;
}
.banner-box button {
    background-color: transparent;
    border: 1px solid white;
    color: white;
}
.banner-box:hover button{
    background-color: rgb(16, 160, 112);
    color: white;
}
.banner-box2 {
    background-image: url(images/banner/b10.jpg);
}

/* banner 3 section  */
.banner3 .banner-box span {
    color: red;
    font-size: 20px;
    font-weight: 600;
}
.banner3 .banner-box {
    width: 32%;
    margin: 20px 0;
    height:35vh;
    background-image: url(images/banner/b7.jpg);
}
/* newsletter section  */
.newsletter {
    padding: 0 50px;
    height: 25vh;
    margin: 20px 10px;
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    justify-content: space-between;
    background-image: url(images/banner/b14.jpg);
    background-size: cover;
    background-color: #041e42;
}
.newstack span {
    color: orange;
    display: flexbox;
  
}
.form {
    display: flex;
    align-items: center;
    justify-content: center;
    max-width: 100%;
}
.form input {
    height: 50px;
    width: 500px;
    padding: 0 1.25em;
    border-radius: 4px;
    border: none;
    display: flex;
    border-top-right-radius: 0px;
    border-bottom-right-radius: 0px;
}
.form button {
    height: 50px;
    width: 100px;
    max-width: 100%;
    background-color: rgb(16, 160, 112);
    border: none;
    color: white;
    border-radius: 4px;
    font-weight: 600;
    border-top-left-radius: 0px;
    border-bottom-left-radius: 0px;
}
.newstack h2 {
    color: white;
}
/* ... */

